* addeds music fft and graphical view of spectrum * added import and execution separation in different menus * added import to document folder of data files

--- a/build.gradle
+++ b/build.gradle
@@ -91,5 +91,6 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
+        compile group: 'ws.schild', name: 'jave-all-deps', version: '3.2.0'
     }
 }
