--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ allprojects {
         gradlePluginPortal()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple' }
     }
 }
 
@@ -92,5 +94,7 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
         compile group: 'ws.schild', name: 'jave-all-deps', version: '3.2.0'
+        implementation 'com.github.sealedtx:java-youtube-downloader:3.0.1'
+        implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     }
 }
