--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -21,4 +21,7 @@
         </activity>
     </application>
 
+    <uses-sdk android:minSdkVersion="24"
+        android:targetSdkVersion="24"/>
+
 </manifest>
